# Metaprogramming-Course

./: CMakeLists.txt  README.md
Lecture-1/: CMakeLists.txt
Lecture-1/basic_string_cmp/: CMakeLists.txt  README.md  compare.h
Lecture-1/basic_string_cmp/test/: test.cpp
Lecture-1/testqual/: CMakeLists.txt  Lexer.cpp  Lexer.h  README.md  TestQual.cpp  TestQual.h  main.cpp
Lecture-1/testqual/test/: test.py
